possible moves after move

--- a/reactchess.client/src/components/Board.css
+++ b/reactchess.client/src/components/Board.css
@@ -12,6 +12,7 @@
 .chess-row {
     display: flex;
     flex: 1;
+    border: 1px solid black;
 }
 
 .chess-square {
@@ -19,6 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 1px solid black;
 }
 
 .chess-square.white {
@@ -29,8 +31,7 @@
     background-color: #b58863;
 }
 
-/* highlight a square for potential move */
-.chess-square.highlight {
-    font-weight: bolder;
-    color: gold;
+.chess-square.potential-move {
+    background-color: lightgray;
+    border: 1px solid red;
 }
